--- a/index.html
+++ b/index.html
@@ -46,32 +46,37 @@
         </p>
     </header>
     <main class="main">
-        <section class="main_section_why_focusing_hard">
+        <section class="main_section main_section_why_focusing_hard">
             <h2 class="section_title">Почему сосредоточиться так сложно</h2>
             <div class="section_content">
-                <h4 class="section_secondary_title title-decor">Многозадачность</h4>
-                <p class="section_text">
-                    Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна
-                    вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
-                    <a class="section_link_accent text-shadow" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач,
-                    организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся и быстро
-                    устаём.
-                </p>
-                <h4 class="section_secondary_title title-decor">Дофамин</h4>
-                <p class="section_text">
-                    С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная
-                    противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
-                    от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и
-                    мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.
-                </p>
+                <div class="section_content_card">
+                    <h3 class="section_secondary_title title-decor">Многозадачность</h3>
+                    <p class="section_text">
+                        Особенно сложно сосредоточиться, когда задач много и все они — важные. Где же легендарная многозадачность, когда она так нужна
+                        вам (и всем нанимающим менеджерам этого мира)? А дело в том, что её просто не существует. Исследователи
+                        <a class="section_link_accent" target="_blank" href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7075496/">выяснили</a>, что мозгу тяжело концентрироваться даже на двух делах одновременно. А когда в поле внимания попадает несколько важных
+                        задач, организм паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно: ошибаемся
+                        и быстро устаём.
+                    </p>
+                </div>
+                <div class="section_content_card">
+                    <h3 class="section_secondary_title title-decor">Дофамин</h3>
+                    <p class="section_text">
+                        С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться замешана и полная
+                        противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения мозга. Причём тут он? Мы часто
+                        отвлекаемся от важной задачи на что-то более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это время и
+                        выделяется дофамин — и мы чувствуем удовольствие. Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
+                        получаешь.
+                    </p>
+                </div>
             </div>
         </section>
 
-        <section class="main_section_what_decreases_focus">
-            <h2 class="section_title second_reason_title">Что снижает концентрацию внимания?</h2>
+        <section class="main_section main_section_what_decreases_focus">
+            <h2 class="section_title">Что снижает концентрацию внимания?</h2>
             <div class="section_content">
                 <div class="section_content_card">
-                    <h4 class="section_secondary_title title-decor">Многозадачность</h4>
+                    <h3 class="section_secondary_title title-decor">Многозадачность</h3>
                     <p class="section_text">
                         Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация (и резко меняющийся мир в целом) заставляет
                         наш мозг постоянно «сканировать» окружающую среду на предмет опасности. Например, читать новости вместо работы. Но быть
@@ -79,7 +84,7 @@
                     </p>
                 </div>
                 <div class="section_content_card">
-                    <h4 class="section_secondary_title title-decor">Еда</h4>
+                    <h3 class="section_secondary_title title-decor">Еда</h3>
                     <p class="section_text">
                         «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг энергию и помогают ему лучше работать. Но
                         уходит эта энергия также быстро, как и приходит. А мы в результате попадаем на «углеводные качели»: как только действие
@@ -87,7 +92,7 @@
                     </p>
                 </div>
                 <div class="section_content_card">
-                    <h4 class="section_secondary_title title-decor">Гаджеты</h4>
+                    <h3 class="section_secondary_title title-decor">Гаджеты</h3>
                     <p class="section_text">
                         Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках — подкаст, а на компьютере фоном — ещё и видео с
                         забавными утятами. В результате мозг пытается переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к
@@ -98,11 +103,11 @@
             </div>
         </section>
 
-        <section class="main_section_ways_to_increase_focus">
-            <h2 class="section_title grid_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
-            <div class="section_ways_to_increase_focus_text grid_text">
+        <section class="main_section main_section_ways_to_increase_focus">
+            <h2 class="section_title">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+            <div class="section_content">
                 <h3 class="section_sub_title title-decor">5 простых (на самом деле не очень) советов</h3>
-                <div class="main_section_reasons_ways_content">
+                <div class="section_content_card">
                     <h4 class="section_secondary_title title-decor">Представьте небо и облака</h4>
                     <p class="section_text">
                         Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. Ведь часто именно тревожные мысли о сложных
@@ -110,23 +115,31 @@
                         вы, а облака — тревожные мысли. И сколько бы их ни было — ясное небо всегда будет где-то там, за тучами, и никуда не денется.
                         Это упражнение поможет вернуться в настоящий момент, а не волноваться о потенциальных проблемах из будущего.
                     </p>
-                    <h4 class="section_secondary_title title-decor">Включите музыку</h4>
+                </div>
+                <div class="section_content_card">
+                    <h3 class="section_secondary_title title-decor">Включите музыку</h3>
                     <p class="section_text">
                         Но не любую, и не любимую. Любимая может быть связана с сильными положительными эмоциями, которые тоже очень сильно отвлекают.
                         Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать включить плейлист в «белым шумом» или нейромузыкой.
                     </p>
-                    <h4 class="section_secondary_title title-decor">Прогуляйтесь</h4>
+                </div>
+                <div class="section_content_card">
+                    <h3 class="section_secondary_title title-decor">Прогуляйтесь</h3>
                     <p class="section_text">
                         Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-                        <a class="text-shadow" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
+                        <a class="section_link_accent" target="_blank" href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328">показал</a>, что созерцание природы повышает концентрацию, в то время как после просмотра городских пейзажей она наоборот понижается.
                         Можно совместить прогулку с физическими упражнениями или бегом — так в мозг поступит ещё больше кислорода и он будет лучше
                         работать. Но и простая двадцатиминутная прогулка — тоже отличный вариант.
                     </p>
-                    <h4 class="section_secondary_title title-decor">Хорошо ешьте</h4>
+                </div>
+                <div class="section_content_card">
+                    <h3 class="section_secondary_title title-decor">Хорошо ешьте</h3>
                     <p class="section_text">
                         Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые препятствуют резким скачкам сахара в крови. Например, с
                         высоким содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
                     </p>
+                </div>
+                <div class="section_content_card">
                     <h3 class="section_secondary_title title-decor">Читайте</h3>
                     <p class="section_text">
                         Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -134,15 +147,16 @@
                     </p>
                 </div>
             </div>
-            <div class="section_ways_to_increase_focus_gallery grid_gallery">
-                <h3 class="section_sub_title title-decor">А можно в картинках?</h3>
-                <div class="section_ways_to_increase_focus_pictures">
-                    <img src="./images/sunset.png" alt="Закат" class="image image1" />
-                    <img src="./images/ice-cream.png" alt="Мороженое" class="image image2" />
-                    <img src="./images/tape.png" alt="Аудиокассета" class="image image3" />
-                    <img src="./images/books.png" alt="Книги" class="image image4" />
-                    <img src="./images/street.png" alt="Улица" class="image image5" />
-                </div>
+        </section>
+
+        <section class="main_section section_ways_to_increase_focus_gallery">
+            <h3 class="section_sub_title title-decor">А можно в картинках?</h3>
+            <div class="section_content">
+                <img src="./images/sunset.png" alt="Закат на фоне гор и моря" class="image image-sunset" />
+                <img src="./images/ice-cream.png" alt="Большая порция мороженного" class="image image-ice-cream" />
+                <img src="./images/tape.png" alt="Аудиокассета и плеер на фоне" class="image image-tape" />
+                <img src="./images/books.png" alt="Стопка книг с чашкой на них" class="image image-books" />
+                <img src="./images/street.png" alt="Пустая улица в Японии" class="image image-street" />
             </div>
         </section>
     </main>
